# test_pkg

./: pyproject.toml  pyvenv.cfg
test_pkg/: mod1.py
